apps/syncthing/overlays/nishir-tailnet/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: syncthing
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: syncthing
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: shikanime
