apps/syncthing/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: syncthing
spec:
  gatewayClassName: syncthing
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: syncthing-i-shikanime-studio-tls
            group: ""
            kind: Secret
    - name: syncthing
      port: 22000
      protocol: TCP
    - name: syncthing-udp
      port: 22000
      protocol: UDP
