apps/syncthing/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing-redirect
spec:
  hostnames:
      - syncthing.i.shikanime.studio
  parentRefs:
    - name: syncthing
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
