apps/syncthing/overlays/nishir-tailnet/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
spec:
  hostnames:
    - syncthing.i.shikanime.studio
  parentRefs:
    - name: syncthing
      sectionName: https
