apps/syncthing/overlays/nishir-tailnet/patch-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: syncthing
spec:
  parentRefs:
    - name: syncthing
      sectionName: syncthing
