apps/syncthing/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: syncthing
  namespace: shikanime
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: syncthing
      app.kubernetes.io/name: syncthing
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
      ports:
        - port: http
        - port: sync
        - port: sync-udp
